--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ networks:
 volumes:
   pg_data:
     driver: local
+  grafana-storage:
 
 services:
   postgres:
@@ -34,3 +35,16 @@ services:
       - 5433:80
     networks:
       - overlay
+
+  grafana:
+    image: grafana/grafana:latest
+    ports:
+      - '3000:3000'
+    volumes:
+      - grafana-storage:/var/lib/grafana
+      - ./grafana-provisioning/:/etc/grafana/provisioning
+    depends_on:
+      - postgres
+    environment:
+      - GF_SECURITY_ADMIN_USER=${Admin}
+      - GF_SECURITY_ADMIN_PASSWORD=${Anastasia}
